--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,35 @@
-a{
-    color: green;
-    font-size: x-large;
-    font-style: italic;
+.container {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 10px;
 }
 
-h1{
-    margin-top: 100px;
-    font-size:xx-large;
+.center {
+	text-align: center;
 }
 
-p{
-    font-family: 'Times New Roman', Times, serif;
+h1 {
+	margin-top: 0;
 }
 
-.texto{
-    color: red;
+a {
+	display: block;
+	margin-bottom: 10px;
+	color: rgb(32, 207, 47);
 }
 
-a:hover{
-    color: red;
-    font-size: xx-large;
+a:hover {
+	color: red;
 }
 
-#parrafo{
-    color: blueviolet;
-    font-style: oblique;
+img {
+	width: 30%;
+	height: 30%;
 }
 
+.white {
+	color: white;
+}
